api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: NodePort
  selector:
    app: api-service
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30005
