deployment.yaml
# 1. Deployment Untuk Backend API (api-service)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-service
  template:
    metadata:
      labels:
        app: api-service
    spec:
      containers:
      - name: backend-api
        image: api-service:v2
        imagePullPolicy: Never
        ports:
        - containerPort: 5000

        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3

---

# 2. Service Untuk Backend API (api-service)
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP
  selector:
    app: api-service
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000

---

# 3. Deployment Untuk Frontend Web (web-service)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-service
  template:
    metadata:
      labels:
        app: web-service
    spec:
      containers:
      - name: frontend-web
        image: web-service:v2
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
# 4. Service Untuk Frontend Web (web-service)
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: NodePort
  selector:
    app: web-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30007
