ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-ingress
spec:
  rules:
  - host: dev.jawaracodecorp.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 80
      
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 5000
